ch2-VariablesExpressionsandStatements.txt
Exercise 2-1:
Problem: What happens if:
Assumption(s):
1. 42 = n: invalid syntax
2. x = y = 1: x=1 ; y=1
3. A statement ends with a semicolon: SyntaxError
4. A statement ends with a period: invalid syntax
5. xy: xy is not defined

Result:
1.   File "<stdin>", line 1
SyntaxError: can't assign to literal
2. x=1 ; y=1
3. Nothing
4.   File "<stdin>", line 1
    x+y.
       ^
SyntaxError: invalid syntax
5.Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'xy' is not defined

Exercise 2-2:
Problem: Calculate:
Assumption(s):
1. The volume of a sphere with radius r is 4/3 π r3. What is the volume of a sphere with radius 5: 500
2. Suppose the cover price of a book is $24.95, but bookstores get a 40% discount. Shipping costs $3 for the first copy and 75 cents for each additional copy. What is the total wholesale cost for 60 copies: 40% of 25 = 15 * 60 = 900; 3 + 59 * 0.75 = 62; 900 + 62 = $962
3. If I leave my house at 6:52 am and run 1 mile at an easy pace (8:15 per mile), then 3 miles at tempo (7:12 per mile) and 1 mile at easy pace again, what time do I get home for breakfast: 6:52:00 + 0:8:15 = 6:60:15 = 7:00:15 + (0:7:12 * 3) = 7:00:15 + 0:21:36 = 7:21:51 + 0:8:15 = 7:29:66 = 7:30:06 am

Result:
1. 523.5987755982989
2. 945.4499999999999
3. 7:30 am(7.501666666666667)
